# investigating-loop-detection-algorithms

./: .gitignore  README.md  README.txt
algorithms/: note.txt
algorithms/algorithm-3/: CMakeLists.txt  Graph.cpp  Graph.h  Utilities.cpp  Utilities.h  main.cpp
algorithms/algorithm-3/aho-sethi-and-ullman-1986-natural-loops/: Graph.cpp  Graph.h  Utilities.cpp  Utilities.h  main.cpp
algorithms/algorithm-3/aho-sethi-and-ullman-1986-natural-loops-results/do-while-loop/: results.txt
algorithms/algorithm-3/aho-sethi-and-ullman-1986-natural-loops-results/duffs-device/: results.txt
algorithms/algorithm-3/aho-sethi-and-ullman-1986-natural-loops-results/for-loop/: results.txt
algorithms/algorithm-3/aho-sethi-and-ullman-1986-natural-loops-results/g1/: results.txt
algorithms/algorithm-3/aho-sethi-and-ullman-1986-natural-loops-results/g2/: results.txt
algorithms/algorithm-3/aho-sethi-and-ullman-1986-natural-loops-results/g3/: results.txt
algorithms/algorithm-3/aho-sethi-and-ullman-1986-natural-loops-results/g4/: results.txt
algorithms/algorithm-3/aho-sethi-and-ullman-1986-natural-loops-results/g5a/: results.txt
algorithms/algorithm-3/aho-sethi-and-ullman-1986-natural-loops-results/g5b/: results.txt
algorithms/algorithm-3/aho-sethi-and-ullman-1986-natural-loops-results/loop-busy-wait/: results.txt
algorithms/algorithm-3/aho-sethi-and-ullman-1986-natural-loops-results/loop-empty/: results.txt
algorithms/algorithm-3/aho-sethi-and-ullman-1986-natural-loops-results/loop-sequence-of-instructions/: results.txt
control-flow-graph-test-cases/: michael-wolfe-gX.txt  (+1 more)
(+486 files in other folders)
